# Scaffolding_CLI

./: .env.example  README.md  pyproject.toml
forge/: main.py
forge/commands/: add_secret.py  create_project.py  init.py  init_ci.py  list_types.py  scaffold.py
forge/config/: settings.py  store.py
forge/config/templates/: dependabot.yml.j2  fastapi.Dockerfile.j2  fastapi.gitignore.j2  go.Dockerfile.j2  go.gitignore.j2  node.Dockerfile.j2  python.Dockerfile.j2  python.gitignore.j2  react.gitignore.j2  readme.j2  terraform_variables.tf.j2
forge/config/templates/cd/: fastapi.yml.j2  go.yml.j2  react.yml.j2
forge/config/templates/ci/: fastapi.yml.j2  go.yml.j2  node.yml.j2  python.yml.j2  react.yml.j2
forge/config/templates/fastapi/src/: main.py.j2
forge/config/templates/go/: go.mod.j2
forge/config/templates/go/cmd/: main.go.j2
forge/config/templates/node/: package.json.j2
forge/config/templates/node/src/: index.js.j2
forge/config/templates/react/: index.html.j2  package.json.j2
forge/config/templates/react/src/: App.jsx.j2
forge/detectors/: project_type.py
forge/dns/: cloudflare.py
forge/generators/: ci.py  dockerfile.py  gitignore.py  readme.py  structure.py  terraform.py
forge/github/: branch_protection.py  client.py  repo.py  secrets.py
tests/: test_generators.py  test_github.py
