[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-scaffold"
version = "0.1.1"
description = "CLI to scaffold new projects and set up CI/CD pipelines with company standards"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "theo", email = "theo.morin1402@gmail.com" }
]
keywords = ["cli", "scaffold", "ci", "cd", "devops", "github-actions"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "questionary>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "PyNaCl>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/theo-mrn/Scaffolding_CLI"
Repository = "https://github.com/theo-mrn/Scaffolding_CLI"

[project.scripts]
forge = "forge.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
